Closed Bug 763133 Opened 14 years ago Closed 14 years ago

border-radius not clipping SVG contents

Categories

(Core :: SVG, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla16

People

(Reporter: bzbarsky, Assigned: longsonr)

Details

Attachments

(2 files)

Example: <!DOCTYPE html> <html> <head> </head> <body> <svg id="paper" version="1.1" width="300" height="300" style="border-radius: 200px; overflow: hidden; border: 1px solid green; background-color: red;"> <rect x="0" y="0" width="400" height="400" fill="blue"> </svg> </body> </html>
Attached patch patchSplinter Review
Assignee: nobody → longsonr
Attachment #631757 - Flags: review?(bzbarsky)
Attachment #631757 - Flags: review?(bzbarsky) → review+
Flags: in-testsuite+
Target Milestone: --- → mozilla16
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: