Bug 763133 - border-radius not clipping SVG contents. r=bzbarsky